# stereo-dandifier

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
src/stereo_dandifier/: __init__.py  __main__.py  caption_rendering.py  card_json.py  card_rendering.py  exif.py  formats.py  image_metadata.py  image_ops.py  importer.py  main.py  models.py  photo_ops.py  print_layout.py  print_rendering.py  stereo_ops.py  ui.py  window_geometry.py
tests/: conftest.py  test_card_json.py  test_exif.py  test_formats.py  test_image_ops.py  test_importer.py  test_models.py  test_print_layout.py  test_ui.py
