[project]
name = "stereo-dandifier"
version = "0.1.0"
description = "An opinionated stereoscopic image tool for making beautiful stereo cards."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.2.0",
    "pyside6>=6.11.1",
    "rawpy>=0.25.1",
]

[dependency-groups]
dev = [
    "black>=26.0.0",
    "pytest>=9.0.0",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
stereo-dandifier = "stereo_dandifier.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stereo_dandifier"]
